wp-content/themes/rr/style.css
/* ... */
::-moz-selection {

	background:#04A4CC;

	color:#FFF;

	text-shadow:none;

}

   

/*------------------------------------*\

    WORDPRESS CORE

\*------------------------------------*/

   

.alignnone {

	margin:5px 20px 20px 0;

}

.aligncenter,

div.aligncenter {

	display:block;

	margin:5px auto 5px auto;

}

.alignright {

	float:right;

	margin:5px 0 20px 20px;

}

.alignleft {

	float:left;

	margin:5px 20px 20px 0;

}

.aligncenter {

	display:block;

	margin:5px auto 5px auto;

}

a img.alignright {

	float:right;

	margin:5px 0 20px 20px;

}

a img.alignnone {

	margin:5px 20px 20px 0;

}

a img.alignleft {

	float:left;

	margin:5px 20px 20px 0;

}

a img.aligncenter {

	display:block;

	margin-left:auto;

	margin-right:auto;

}

.wp-caption {

	background:#FFF;

	border:1px solid #F0F0F0;

	max-width:96%;

	padding:5px 3px 10px;

	text-align:center;

}

.wp-caption.alignnone {

	margin:5px 20px 20px 0;

}

.wp-caption.alignleft {

	margin:5px 20px 20px 0;

}

.wp-caption.alignright {

	margin:5px 0 20px 20px;

}

.wp-caption img {

	border:0 none;

	height:auto;

	margin:0;

	max-width:98.5%;

	padding:0;

	width:auto;

}

.wp-caption .wp-caption-text,

.gallery-caption {

	font-size:11px;

	line-height:17px;

	margin:0;

	padding:0 4px 5px;

}

.sticky {

	

}

.bypostauthor {

	

}



/*------------------------------------*\

    PRINT

\*------------------------------------*/



@media print {

	* {

		background:transparent !important;

		color:#000 !important;

		box-shadow:none !important;

		text-shadow:none !important;

	}

	a,

	a:visited {

		text-decoration:underline;

	}

	a[href]:after {

		content:" (" attr(href) ")";

	}

	abbr[title]:after {

		content:" (" attr(title) ")";

	}

	.ir a:after,

	a[href^="javascript:"]:after,

	a[href^="#"]:after {

		content:"";

	}

	pre,blockquote {

		border:1px solid #999;

		page-break-inside:avoid;

	}

	thead {

		display:table-header-group;

	}

	tr,img {

		page-break-inside:avoid;

	}

	img {

		max-width:100% !important;

	}

	@page {

		margin:0.5cm;

	}

	p,

	h2,

	h3 {

		orphans:3;

		widows:3;

	}

	h2,

	h3 {

		page-break-after:avoid;

	}

}


p.button a {
	background-color: #a3aab3;
  padding:10px 14px;
  color: #ffffff !important;
  margin: 0 12px;
  font-family: robotocondensed;
  font-size: 18px;
  font-weight: bold;
}
p.button a:hover {
	background-color: #990101;
	text-decoration: none;
}

.imgservices img { margin: 25px 0px 25px 25px; }
p a.imgpartners img { margin: 0px 20px 25px 0; }
p a.imgpartners:nth-child(4) img {
	margin: 0 0 25px 0;
}


.embed-box {
    position: relative;
    padding-bottom: 53%; /* ratio for youtube embed */
    padding-top: 30px;
    height: auto;
    overflow: hidden;
}

.embed-box iframe,
.embed-box object,
.embed-box embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

.thin {
  font-size: 44px;
  font-family: robotocondensed;
}

.regular {
  font-size: 44px;
  font-family: robotolight;
}

.bold {
  font-size: 44px;
  font-family: oswaldbold;
}

/*------------------------------------*\

    LEADERSHIP PAGE

\*------------------------------------*/

section[role="leader"] .leader-hover-thumbnail {
  display: none;
}

section[role="leader"] .leader-popout {
  display: none;
}

/*****FANCYBOX STYLING*****/

#fancybox-overlay {
  background-color: #000000 !important;
  opacity: 0.8 !important;
}

#fancybox-close {
  position: absolute;
  right: -115px !important;
  top: -15px  !important;
}

#fancybox-right {
  position: absolute !important;
  right: -80px !important;
}

#fancybox-left {
  position: absolute !important;
  left: -60px !important;
}
 
#fancybox-content {
  width: 640px !important;
  height: 360px !important;
}

/* home */
/* Banner Styling */
.slider {
	z-index: 0;
	position: relative;
  height: 250px;
}

.slider h1 {
	color: #FFF;
	display: block;
	font-family: oswaldbold;
	font-size: 6.5em;
	line-height: 2.5em;
	position: absolute;
	text-align: center;
	text-transform: uppercase;
	width: 100%;
}

.slider img { width:100%; min-height: 150px}
.easingsliderpro-arrows {
	top:45% !important;
}

.slider-content {
	width: 100%;
	position: absolute;
	height: 250px;
}

.slider-content.with-excerpt {
  padding: 0 15%;
	display: table;
}

.slider h1.entry-title {
  font-size: 6.5em;
  width: 100%;
  line-height: 65px;
  text-align: center;
  display: inline-block;
  position: relative;
  vertical-align: top;
  margin-top: 97px;
}

.slider h1.with-excerpt {
  font-size: 6.5em;
  width: 48%;
  line-height: 80px;
  text-align: right;
  display: inline-block;
  position: relative;
/*  vertical-align: top;*/
/*  margin-top: 45px;*/
  display: table-cell;
  vertical-align: middle;
}

.slider p {
  color: #ffffff;
  font-size: 2.8em;
  width: 48%;
  position: relative;
  padding-left: 40px;
  display: inline-block;
/*  margin-top: 41px;*/
  display: table-cell;
  vertical-align: middle;
}

@media only screen and (max-width:1250px) {

  .slider h1.with-excerpt {
    font-size: 5.5em;
    width: 48%;
    line-height: 80px;
    text-align: right;
    display: inline-block;
    position: relative;
  /*  vertical-align: top;*/
  /*  margin-top: 45px;*/
    display: table-cell;
    vertical-align: middle;
  }

  .slider p {
    color: #ffffff;
    font-size: 2.5em;
    width: 48%;
    position: relative;
    padding-left: 40px;
    display: inline-block;
  /*  margin-top: 41px;*/
    display: table-cell;
    vertical-align: middle;
  }

}
/* ... */

